<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    
    <RelativeLayout
        android:background="@drawable/sign_in"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp">
        
        <ImageView
            android:id="@+id/imgLogo"
            android:background="@drawable/logotext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="100dp"
            android:contentDescription="@string/img_logo"/>
        
        <TextView
            android:id="@+id/tvSilahkan"
            android:text="@string/tv_silahkan"
            android:layout_below="@id/imgLogo"
            android:layout_marginBottom="50dp"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:inputType="text"
            android:autofillHints="@string/Username"
            android:hint="@string/Username"
            android:drawableStart="@drawable/ic_username"
            android:id="@+id/etUsername"
            android:textAlignment="center"
            android:layout_below="@id/tvSilahkan"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/fab_margin"
            android:layout_width="180dp"
            android:layout_height="wrap_content"/>

        <EditText
            android:inputType="textPassword"
            android:autofillHints="@string/hint_password"
            android:hint="@string/hint_password"
            android:drawableStart="@drawable/ic_password"
            android:id="@+id/etPassword"
            android:textAlignment="center"
            android:layout_below="@id/etUsername"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/fab_margin"
            android:layout_width="180dp"
            android:layout_height="wrap_content"/>
        
        <Button
            android:text="Sign in"
            android:background="@drawable/btn_sign_in"
            android:id="@+id/btnLogin"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/etPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        
        <TextView
            android:id="@+id/tvCreateAcc"
            android:layout_below="@id/btnLogin"
            android:text="@string/tvc_createacc"
            android:layout_marginTop="@dimen/fab_margin"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        
    </RelativeLayout>

</LinearLayout>